# dataloglite-rs

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: tests.yml
src/: api.rs  lib.rs  main.rs  parser.rs  query_engine.rs
test_examples/: cousins_facts_rules.datalog  cousins_full.datalog  example_comments.datalog  query_basic_relation.datalog
test_examples/parser/: comments.datalog
test_examples/queries/: basic_conjunctive.datalog  basic_fact.datalog  basic_projection_fact.datalog  basic_projection_relation.datalog  basic_relation.datalog  recursive_siblings_first_is_var.datalog  relation_query_recursive_siblings_first_is_var.datalog  rule_father.datalog  variable_based_query.datalog  variable_based_query_first_is_var.datalog
tests/: integration_tests.rs  main_tests.rs  parser_queries_tests.rs  parser_tests.rs  queries_tests.rs
