[package]
name = "dataloglite"
version = "0.1.0"
edition = "2021"

[lib]
name = "dataloglite"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "8.0.0"
clap = { version = "4.0", features = ["derive"] }
indoc = "2.0.6"
itertools = "0.12"
